[package]
name = "slatedb-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
slatedb = { version = "0.10.0", default-features = false, features = ["moka", "aws", "azure"] }
object_store = "0.12.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
bytes = "1"
once_cell = "1"

[[example]]
name = "native_bench"
path = "native_bench.rs"

[profile.release]
lto = true
strip = "symbols"
