[package]
name = "slatedb-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
slatedb = { version = "0.10.0", default-features = false, features = ["moka", "aws", "azure"] }
object_store = "0.12.3"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
napi = { version = "3", features = ["async", "napi9"] }
napi-derive = "3"
bytes = "1"

[build-dependencies]
napi-build = "1"

[profile.release]
lto = true
strip = "symbols"
